--- a/onesite/templates/onesitedemo_all.html
+++ b/onesite/templates/onesitedemo_all.html
@@ -1,13 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ to.onesitedemo_title }}</title>
-</head>
-<body>
-{% for to in to %}
-    {{ to.onesitedemo_title }} </br>
-    {{ to.onesitedemo_text }} </br></br>
-{% endfor %}
-</body>
-</html>
+{% extends 'base.html' %}
+
+
+{% block title %}
+All info
+{% endblock %}
+
+{% block onesite %}
+    {% for to in to %}
+        {{ to.onesitedemo_title }} </br>
+        {{ to.onesitedemo_text }} </br></br>
+    {% endfor %}
+{% endblock %}
+
+
+
