--- a/onesite/templates/onesitedemo_one.html
+++ b/onesite/templates/onesitedemo_one.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+
+{% block title %}
+demo
+{% endblock %}
+
+{% block onesite %}
+
+        {{ demo }} </br>
+
+{% endblock %}
+
