--- a/info/templates/info_base.html
+++ b/info/templates/info_base.html
@@ -5,11 +5,14 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-
+<div align="center">
 <h1>
     {% block text %}
     {% endblock %}
 </h1>
 
+<hr>
+ <a href="/">главная</a>
+</div>
 </body>
 </html>
