--- a/onesite/templates/base.html
+++ b/onesite/templates/base.html
@@ -5,9 +5,11 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-
+<div align="center">
 {% block onesite %}
 {% endblock %}
-
+<hr>
+ <a href="/">главная</a>
+</div>
 </body>
 </html>
