--- a/info/templates/index.html
+++ b/info/templates/index.html
@@ -9,6 +9,11 @@ Index
     {% block text %}
 
     {{ index_text }}
+    <hr>
+
+        Forms <br>
+
+        <a href="/forms">forms</a><br>
 
     <hr>
         Info <br>
@@ -23,6 +28,7 @@ Index
 
         <a href="/onesite">one page</a><br>
         <a href="/onesite/all">all page</a><br>
+
 
     {% endblock %}
 
