--- a/myforms/templates/tranks.html
+++ b/myforms/templates/tranks.html
@@ -1,6 +1,9 @@
 {% extends 'forms_base.html' %}
 
+
 {% block title %} OK {% endblock %}
-{% block forms %}
+{% block text %}
+    {{ form.name }}
+    {{ form.comment }}
 
 {% endblock %}
