--- a/info/templates/index.html
+++ b/info/templates/index.html
@@ -11,6 +11,9 @@ Index
     {{ index_text }}
     <hr>
 
+        <a href="/admin">admin</a><br>
+    <hr>
+
         Forms <br>
 
         <a href="/forms">forms</a><br>
